# LearnLab

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  setup-env.sh
.github/workflows/: 01-test.yml  02-build.yml  03-deploy.yml  backend-cicd.yml  ci-cd.yml
POC/: scraper.py
POC/Agentic_Chunker/parsed_docs/: Artificial_intelligence_in_information_systems_research-with-images.json  Artificial_intelligence_in_information_systems_research-with-images.md  Attention_is_all_you_need-with-images.json  Attention_is_all_you_need-with-images.md  Enhancing_RAG_Performance_Through_Chunking_and_Tex-with-images.json  Enhancing_RAG_Performance_Through_Chunking_and_Tex-with-images.md  Research_Paper_on_Artificial_Intelligence-with-images.json  Research_Paper_on_Artificial_Intelligence-with-images.md
POC/podcast-agent-poc/: retreiving.py
airflow/: .env.example  Dockerfile  pyproject.toml
airflow/dags/: example_dag.py
airflow/scripts/: init.sh
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/agents/podcast_agent/: learn_lab_assistant_agent.py  podcast_agent_aws_save.py  podcast_agent_groq.py
backend/agents/utils/: blog_agent.py  flashcard_agent.py  pdf_processor.py  podcast_s3_storage.py  qna_agent.py  rag_application.py  semantic_cache.py  tweet_agent.py  upstash_cache.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  files.py  flashcards.py  social.py
backend/app/api/v1/chat/: router.py
backend/app/api/v1/generate/: router.py
backend/app/api/v1/podcast/: podcast.py
backend/app/api/v1/quiz/: analytics.py  attempt.py  question.py  quiz.py
backend/app/core/: config.py  deps.py
backend/app/models/: __init__.py  file.py  user.py
backend/app/models/podcast/: analytics.py  podcast.py  progress.py
backend/app/schemas/chat/: models.py
backend/app/schemas/podcast/: podcast.py
backend/app/schemas/quiz/: attempt.py  question.py
backend/app/services/: s3.py  task_manager.py
backend/app/services/flashcard_service/: __init__.py  card_service.py  deck_service.py  review_service.py
backend/app/services/podcast_service/: audio.py  s3.py
backend/app/services/quiz_service/: analytics_service.py  question_service.py
backend/app/services/sample_data_service/: service.py
backend/tests/: .env.test  conftest.py  test_config.py  test_main.py
docker/postgres/: init.sql  sample_data.sql
frontend/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/design-system/: page.tsx
frontend/components/: test-notification.tsx
frontend/components/auth/: login-form.tsx  register-form.tsx
frontend/components/examples/: design-system-demo.tsx
frontend/components/file/: file-grid.tsx  file-uploader.tsx  index.ts  (+1 more)
frontend/config/: index.ts
frontend/store/: flashcard-store.ts  index.ts  podcast-store.ts  quiz-store.ts
notes/: backend_authentication_files_documentation.md  database_documentation.md  podcast_agent.md
streamlit-ui/: .env.example  Dockerfile  README.md  app.py  pyproject.toml
(+32 files in other folders)
