[tool.poetry]
name = "learnlab-airflow"
version = "0.1.0"
description = "LearnLab Airflow DAGs and configurations"
authors = ["surya <rebbapragada.s@northeastern.edu>"]

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
apache-airflow = "2.7.3"
apache-airflow-providers-postgres = "^5.7.1"
apache-airflow-providers-http = "^4.6.0"
pandas = "^2.1.3"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
Flask-Session = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
